# crow-hub

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  Makefile  README.md  ROADMAP.md  build.sh  rust-toolchain.toml  scratch.rs  scratch2.rs  scratch4.rs
.claude/: launch.json  settings.local.json
.codex/environments/: environment.toml
.github/: FUNDING.yml
.github/workflows/: ci.yml  release.yml
crates/ch-adapter/: Cargo.toml
crates/ch-adapter/src/: lib.rs
crates/ch-adapter/src/adapters/: claude.rs  codebuddy.rs  gemini.rs  hermes.rs  kimi.rs  mod.rs
crates/ch-agent/: Cargo.toml
crates/ch-agent/src/: lib.rs  loader.rs  manifest.rs  runtime.rs  scanner.rs
crates/ch-agent/src/drivers/: api.rs  mod.rs  subprocess.rs  tmux.rs
crates/ch-core/: Cargo.toml
crates/ch-core/src/: bus.rs  channel.rs  config.rs  lib.rs  orchestrator.rs  registry.rs  session.rs
crates/ch-gui/: Cargo.toml
crates/ch-gui/src/: main.rs
crates/ch-memory/: Cargo.toml
crates/ch-memory/src/: lib.rs
crates/ch-memory/src/backends/: mod.rs  sqlite.rs
crates/ch-memory/src/embedder/: local.rs  mod.rs
crates/ch-model/: Cargo.toml
crates/ch-model/src/: discovery.rs  lib.rs  registry.rs  router.rs
crates/ch-model/src/backends/: anthropic.rs  mock.rs  mod.rs  ollama.rs  openai_compat.rs
crates/ch-monitor/: Cargo.toml
crates/ch-monitor/src/: lib.rs
crates/ch-monitor/src/collectors/: gpu.rs  mod.rs  system.rs
crates/ch-monitor/src/exporters/: console.rs  mod.rs  prometheus.rs
crates/ch-protocol/: Cargo.toml
crates/ch-protocol/src/: error.rs  lib.rs  types.rs
crates/ch-tui/: Cargo.toml
crates/ch-tui/src/: app.rs  main.rs  scratch3.rs  setup.rs
docs/: ARCHITECTURE.md  crow-hub-pitch.pptx  diagrams.html  gen_pitch.py
docs/journals/: 2026-04-26_gui_tauri_architecture.md  2026-04-26_tui_dynamic_task_indicators.md  2026-04-26_tui_intelligent_text_wrapping.md  2026-04-26_tui_isolated_session_context.md  2026-04-26_tui_rich_text_input.md
examples/: crow-hub.toml  simple-workflow.yaml
plugins/agents/claude-ssh-1/: agent.toml
plugins/agents/claude-wsl-ubuntu/: agent.toml
plugins/agents/gemini-wsl-ubuntu/: agent.toml
plugins/agents/hermes-ssh-1/: agent.toml
plugins/agents/kimi-ssh-1/: agent.toml
plugins/agents/kimi-wsl-ubuntu/: agent.toml
plugins/agents/openclaw-ssh-1/: agent.toml
plugins/agents/openclaw-wsl-ubuntu/: agent.toml
