[workspace]
members = [
    "crates/ch-core",
    "crates/ch-model",
    "crates/ch-agent",
    "crates/ch-adapter",
    "crates/ch-memory",
    "crates/ch-monitor",
    "crates/ch-protocol",
    "crates/ch-tui",
    "crates/ch-gui",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Crow Hub Contributors"]
description = "A universal agent orchestration hub"
license = "Apache-2.0"
repository = "https://github.com/zhiqing-yu/crow-hub"
keywords = ["agent", "orchestration", "llm", "ai", "scheduler"]
categories = ["command-line-utilities", "development-tools"]
rust-version = "1.75"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full", "tracing"] }
tokio-util = { version = "0.7", features = ["codec", "time"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# HTTP client/server
reqwest = { version = "0.11", features = ["json", "stream", "rustls-tls"] }
axum = { version = "0.7", features = ["ws", "macros"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace", "fs"] }

# gRPC
tonic = { version = "0.11", features = ["tls"] }
prost = "0.12"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging & Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"

# CLI
clap = { version = "4.4", features = ["derive", "env", "cargo"] }
clap_complete = "4.4"

# Configuration
figment = { version = "0.10", features = ["env", "toml", "json"] }

# Concurrency
dashmap = "5.5"
parking_lot = "0.12"
crossbeam = "0.8"

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1.10"
lazy_static = "1.4"
once_cell = "1.19"

# Async traits
async-trait = "0.1"

# Streams
futures = "0.3"
futures-util = "0.3"
pin-project = "1.1"

# Testing
mockall = "0.12"
tempfile = "3.9"

# TUI
ratatui = { version = "0.24", features = ["crossterm"] }
crossterm = "0.27"

# Protocol
bytes = "1.5"
prost-types = "0.12"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
