[package]
name = "ch-agent"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Crow Hub agent plugin system"
license.workspace = true

[dependencies]
ch-protocol = { path = "../ch-protocol" }
ch-core = { path = "../ch-core" }
ch-model = { path = "../ch-model" }

serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
dashmap = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
regex = "1.10"

[dev-dependencies]
tokio-test = "0.4"
tempfile = { workspace = true }
