[package]
name = "ch-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Crow Hub core engine"
license.workspace = true

[dependencies]
ch-protocol = { path = "../ch-protocol" }

serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
dashmap = { workspace = true }
parking_lot = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
figment = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
mockall = { workspace = true }
tempfile = { workspace = true }
